infrastructure/k8s/argocd-application-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-application-controller
  template:
    metadata:
      labels:
        app: argocd-application-controller
    spec:
      containers:
        - name: argocd-application-controller
          image: argoproj/argocd:v2.6.6
          command:
            - argocd-application-controller
          args:
            - --status-processors
            - "20"
            - --operation-processors
            - "10"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8082
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
